--- a/package.json
+++ b/package.json
@@ -3,14 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.2.2",
+    "@mui/x-data-grid": "^5.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.6.0",
+    "dotenv": "^10.0.0",
+    "final-form": "^4.20.4",
+    "fontawesome": "^5.6.3",
     "google-maps-react": "^2.0.6",
+    "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.7",
+    "react-google-maps": "^9.4.5",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
