--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.2",
     "@mui/x-data-grid": "^5.1.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -17,6 +18,7 @@
     "final-form": "^4.20.4",
     "fontawesome": "^5.6.3",
     "google-maps-react": "^2.0.6",
+    "json-server": "^0.17.0",
     "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
@@ -33,7 +35,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch server/db.json --port 4000"
   },
   "eslintConfig": {
     "extends": [
