--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.32.0",
     "chart.js": "^3.6.0",
     "dotenv": "^10.0.0",
     "final-form": "^4.20.4",
@@ -20,7 +21,10 @@
     "google-maps-react": "^2.0.6",
     "json-server": "^0.17.0",
     "material-table": "^1.69.3",
+    "material-ui-country-flags": "^3.0.1",
+    "material-ui-flags": "^1.2.4",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.7",
