--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.2.1",
-    "@mui/lab": "^5.0.0-alpha.59",
+    "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.3",
     "@mui/x-data-grid": "^5.1.0",
+    "@reduxjs/toolkit": "^1.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -34,6 +35,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.1.6",
+    "redux": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
